--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      Users
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,12 +9,15 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+      <ion-title size="large">Users</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+  <div class="container">
+    <ion-list>
+      <ion-item *ngFor="let user of users" class="user">
+        <ion-label routerLink="../user/{{ user.id }}">Name: {{ user.name }}</ion-label>
+      </ion-item> 
+    </ion-list>
   </div>
 </ion-content>
